--- a/unified_biquaternion_theory/docs/osf_release/main.tex
+++ b/unified_biquaternion_theory/docs/osf_release/main.tex
@@ -133,7 +133,7 @@ UBT provides a unified framework that derives the value of \( \alpha \), explain
 \subsection{Falsifiable Predictions}
 The theory offers concrete, falsifiable predictions, including:
 \begin{enumerate}
-    \item The required negative value of the electron's self-energy (\( \delta m_{EM} \approx -0.11 \) MeV).
+    \item The required negative value of the electron's self-energy (\( \delta m_{EM} \approx -0.11 \) MeV), which should be verifiable by a full UBT QFT calculation.
     \item The existence of a zoo of other stable topological particles ("psychons," higher-generation matter).
     \item Specific density profiles for dark matter halos that can be tested by astronomical observation.
 \end{enumerate}
