--- a/unified_biquaternion_theory/docs/osf_release/main.tex
+++ b/unified_biquaternion_theory/docs/osf_release/main.tex
@@ -13,7 +13,7 @@
 \title{\textbf{The Unified Biquaternion Theory: A Framework for Fundamental Constants, Dark Matter, and Mass Hierarchy}}
 \author{Ing. David Jaroš\thanks{Primary author and theorist. Contact: jdavid.cz@gmail.com} \\
 \textit{with AI assistance from ChatGPT-4o and Gemini 2.5 Pro (as technical aides)}}
-\date{June 30, 2025}
+\date{July 4, 2025}
 
 \begin{document}
 \maketitle
@@ -28,13 +28,13 @@ We present the Unified Biquaternion Theory (UBT), a theoretical framework based 
 \section{Introduction}
 
 \subsection{The Limits of the Standard Model and General Relativity}
-Modern physics is built upon two incredibly successful pillars: General Relativity (GR), which describes gravity and the large-scale structure of the universe, and the Standard Model (SM) of particle physics, which describes the other three fundamental forces via Quantum Field Theory (QFT). Despite their triumphs, a complete picture of reality remains elusive. Key open problems include the incompatibility of GR and QFT, the nature of dark matter, the origin of the matter-antimatter asymmetry, and the fact that the SM contains ~20 free parameters (e.g., the fine-structure constant \(\alpha\), particle masses) whose values are determined by experiment but not explained by theory.
+Modern physics is built upon two incredibly successful pillars: General Relativity (GR), which describes gravity, and the Standard Model (SM) of particle physics, which describes the other three fundamental forces via Quantum Field Theory (QFT). Despite their triumphs, a complete picture of reality remains elusive. Key open problems include the incompatibility of GR and QFT, the nature of dark matter, and the fact that the SM contains ~20 free parameters (e.g., the fine-structure constant \(\alpha\), particle masses) whose values are determined by experiment but not explained by theory.
 
 \subsection{The UBT Proposal: A New Foundation}
 The Unified Biquaternion Theory (UBT) proposes a new foundation to address these challenges. It postulates that physical reality unfolds on a complexified manifold where all four spacetime coordinates are complex-valued. The fundamental entity is a single biquaternion-valued field, \( \Theta(q) \), whose algebraic and topological properties are hypothesized to give rise to all known particles, forces, and even spacetime itself.
 
 \subsection{Structure of the Paper}
-This paper is structured as follows. Section 2 introduces the mathematical foundations of UBT. Section 3 demonstrates how the geometry of GR emerges from the theory. Section 4 details the derivation of fundamental constants and particle masses. Section 5 shows the compatibility of UBT with the Standard Model. Section 6 presents the theory's predictions, including a model for dark matter. Finally, Section 7 summarizes the results and outlines future work.
+This paper is structured as follows. Section 2 introduces the mathematical foundations of UBT. Section 3 demonstrates how the geometry of GR emerges from the theory. Section 4 details the derivation of fundamental constants and particle masses. Section 5 shows the compatibility of UBT with the Standard Model. Section 6 presents the theory's predictions, including a model for dark matter and new particles. Finally, Section 7 summarizes the results and outlines future work.
 
 \section{Foundations of the Unified Biquaternion Theory}
 
