--- a/unified_biquaternion_theory/docs/osf_release/main.tex
+++ b/unified_biquaternion_theory/docs/osf_release/main.tex
@@ -11,12 +11,13 @@
 \linespread{1.15}
 
 \title{\textbf{The Unified Biquaternion Theory: A Framework for Fundamental Constants, Dark Matter, and Mass Hierarchy}}
-\author{Ing. David Jaroš\thanks{Primary author and theorist. Contact: jdavid.cz@gmail.com} \\
+\author{Ing. David Jaroš\thanks{Primary author and theorist. Contact: jdavid.cz@gmail.com}} \\
 \textit{with AI assistance from ChatGPT-4o and Gemini 2.5 Pro (as technical aides)}}
 \date{July 4, 2025}
 
 \begin{document}
 \maketitle
+
 
 \begin{abstract}
 We present the Unified Biquaternion Theory (UBT), a theoretical framework based on a complexified spacetime and a fundamental biquaternion-valued field, \( \Theta(q) \). UBT aims to reconcile quantum field theory and general relativity by providing natural derivations for fundamental constants and particle properties from the geometry and topology of the underlying manifold. The theory predicts the emergence of known particles as topological excitations and introduces new fields associated with consciousness and dark matter. We demonstrate that UBT reduces to known physical theories in their respective limits and offers falsifiable predictions. This paper outlines the theory's core tenets and its successful application to three major unsolved problems: the origin of the fine-structure constant, the nature of dark matter, and the lepton mass hierarchy.
@@ -151,5 +152,8 @@ A key prediction is that the electron's self-energy is negative. We hypothesize 
     \bibitem{Penrose2004} Roger Penrose (2004). \textit{The Road to Reality}.
     \bibitem{PDG2022} R. L. Workman et al. (Particle Data Group) (2022). "Review of Particle Physics".
 \end{thebibliography}
+
+\section*{License}
+This work is licensed under a Creative Commons Attribution 4.0 International License (CC BY 4.0).
 
 \end{document}
