--- a/unified_biquaternion_theory/docs/osf_release/main.tex
+++ b/unified_biquaternion_theory/docs/osf_release/main.tex
@@ -53,11 +53,11 @@ This means each coordinate can be expanded on the quaternion basis \( \{1, \math
 \end{equation}
 where each coefficient \( z_\nu^\mu = x_\nu^\mu + i y_\nu^\mu \) is a complex number.
 
-The classical spacetime coordinates \(x^\mu\) that we observe are identified with the **real-scalar part** of this rich structure:
+The classical 4D spacetime that we observe is interpreted not as a simple "real part" of this structure, but as a **real submanifold**, or **'brane'**, embedded within the higher-dimensional biquaternionic manifold. The coordinates \(x^\mu\) are the coordinates on this brane, which are identified with the real-scalar part of the full coordinates:
 \begin{equation}
     x^\mu \equiv x_0^\mu \quad (\text{for } \mu=0,1,2,3)
 \end{equation}
-All other components (\(y_0^\mu\), and all \(x_{1,2,3}^\mu\), \(y_{1,2,3}^\mu\)) represent internal degrees of freedom of spacetime itself, encoding phase, spin, and gauge information directly into the geometry of the manifold. The simplified notation \( \tau = t + i\psi \), which we use elsewhere, refers specifically to the complexification of the scalar part of the time coordinate \(q^0\).
+All other components (\(y_0^\mu\), and all \(x_{1,2,3}^\mu\), \(y_{1,2,3}^\mu\)) represent internal degrees of freedom of spacetime itself, encoding phase, spin, and gauge information directly into the geometry of the manifold.
 
 \subsection{The Fundamental Field \( \Theta(q) \)}
 The central object is a biquaternion-valued spinor field \( \Theta(q) \in \mathbb{B} \otimes \mathbb{C}^4 \). This single field acts as a universal precursor to all other fields. Its various components and excitational modes correspond to the particles of the Standard Model. It can be locally decomposed into its amplitude and phase: \( \Theta(q) = \rho(q) e^{i\phi(q)} \).
@@ -68,7 +68,6 @@ The dynamics of \( \Theta \) are governed by a generalized covariant wave equati
     \left( \mathcal{D}_\mu \mathcal{D}^\mu + m^2 \right) \Theta(q) = 0
 \end{equation}
 where \( \mathcal{D}_\mu = \partial_\mu + \Omega_\mu \) is the biquaternionic covariant derivative. This equation unifies wave-like propagation in the real part of the coordinates with diffusion-like dynamics in the imaginary part. One of the constraints emerging from this equation is a condition of orthogonality between the gradients of the amplitude and phase: \( \eta^{\mu\nu} \partial_\mu \rho \, \partial_\nu \phi = 0 \).
-
 
 \section{Emergent Physics I: Spacetime and Gravity}
 
